--- a/project_1/css/style.css
+++ b/project_1/css/style.css
@@ -514,7 +514,7 @@ body, html {
     left: 29px;
     width: 8px;
     height: 13px;
-    background: url("../img/breadcrumbs-right.png") no-repeat transparent;   
+    background: url("../img/spritesheet-icons.png") -117px -61px no-repeat transparent;   
 }
 .breadcrumbs-item:nth-child(2) .breadcrumbs-link::after {
     content: "";
