--- a/project_1/css/style.css
+++ b/project_1/css/style.css
@@ -254,7 +254,7 @@ body, html {
     position: absolute;
     top: 10px;
     left: 10px;
-    background: url("../img/icon-phone.png") no-repeat transparent;
+    background: url("../img/spritesheet-decorative.png") -73px -10px no-repeat;
     width: 19px;
     height: 19px;
 }
@@ -504,8 +504,7 @@ body, html {
     width: 16px;
     height: 17px;
     font-size: 0px;
-    background-image: url("../img/icon-home.png");
-    background-repeat: no-repeat;
+    background: url("../img/spritesheet-decorative.png") -40px -10px no-repeat;
 }
 .breadcrumbs-item:nth-child(1) .breadcrumbs-link::after {
     content: "";
@@ -514,7 +513,7 @@ body, html {
     left: 29px;
     width: 8px;
     height: 13px;
-    background: url("../img/breadcrumbs-right.png") no-repeat;   
+    background: url("../img/spritesheet-decorative.png") -10px -10px no-repeat;   
 }
 .breadcrumbs-item:nth-child(2) .breadcrumbs-link::after {
     content: "";
@@ -523,7 +522,7 @@ body, html {
     left: 122px;
     width: 8px;
     height: 13px;
-    background: url("../img/breadcrumbs-right.png") no-repeat;   
+    background: url("../img/spritesheet-decorative.png") -10px -10px no-repeat;   
 }
 .breadcrumbs-item:nth-child(3) .breadcrumbs-link::after {
     content: "";
@@ -532,7 +531,7 @@ body, html {
     left: 244px;
     width: 8px;
     height: 13px;
-    background: url("../img/breadcrumbs-right.png") no-repeat;   
+    background: url("../img/spritesheet-decorative.png") -10px -10px no-repeat;   
 }
 .catalog-title {
     width: 100%;
